# polyglot

./: README.md
cpp-hello-world/: .gitignore  CMakeLists.txt  README.md  app.yaml
cpp-hello-world/.nextmv/: build-amd64.sh  build-arm64.sh  build.sh
cpp-hello-world/src/: main.cpp
cs-sardinecan-packing/: .gitignore  README.md  app.yaml  input.json
cs-sardinecan-packing/.nextmv/: build.sh
rust-goodlp-knapsack/: .gitignore  Cargo.toml  README.md  app.yaml
rust-goodlp-knapsack/.nextmv/: build.sh
rust-goodlp-knapsack/src/: main.rs
rust-hello-world/: README.md  app.yaml  build.sh
rust-hello-world/.nextmv/: build-amd64.sh  build.sh
rust-hello-world/scripts/: build-arm64.sh
rust-hello-world/src/: main.rs
